--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">Todo</string>
+    <string name="app_name" translatable="false">Todo</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="todo_item">todo item</string>
+    <string name="mark_as_important">Mark as important</string>
+    <string name="settings">settings</string>
 </resources>
